--- a/main.html
+++ b/main.html
@@ -1,37 +1,34 @@
+rotate line
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rotating Line</title>
-  <style>
-    #line {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform-origin: 0% 50%;
-      width: 200px;
-      height: 2px;
-      background-color: black;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rotating Line</title>
+    <style>
+        #line {
+            background-color: black;
+            width: 200px;
+            height: 2px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+        }
+    </style>
 </head>
 <body>
 
-  <div id="line"></div>
+<div id="line"></div>
 
-  <script>
+<script type="text/javascript">
     const line = document.getElementById('line');
     let angle = 0;
 
-    function rotateLine() {
-      angle += 2;
-      line.style.transform = rotate(${angle}deg);
-      requestAnimationFrame(rotateLine);
-    }
-
-    rotateLine(); // Start rotating the line
-  </script>
+    setInterval(() => {
+        angle += 2;
+        line.style.transform = rotate(${angle}deg);
+    }, 20);
+</script>
 
 </body>
 </html>
